sm-admin-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: sm-admin
    labels:
        application: sm-admin
spec:
    replicas: 2
    selector:
        matchLabels: 
            application: sm-admin
    template: 
        metadata:
            name: sm-admin
            labels:
                application: sm-admin
        spec:
            affinity:
                podAntiAffinity:
                  preferredDuringSchedulingIgnoredDuringExecution:
                    - weight: 100
                      podAffinityTerm:
                        topologyKey: topology.kubernetes.io/zone
            containers:
                - name: sm-admin
                  image: mchekini/staff-manager-admin-ui:1.0.0
                  imagePullPolicy: Always
                  ports: 
                    - containerPort: 80
