sm-admin-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: sm-admin
    namespace: staff-manager
spec:
    selector: 
        application: sm-admin
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: ClusterIP
